[build-system]
requires = [
  "setuptools >= 65.5",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name            = "sageattention"
version         = "2.1.1"
description     = "Accurate and efficient plug-and-play low-bit attention"
readme          = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "SageAttention team" }
]
dependencies = [
  "torch >= 2.3.0",
  "triton >= 3.0.0",
]

[project.urls]
"Source Code"   = "https://github.com/thu-ml/SageAttention"
"Issue Tracker" = "https://github.com/thu-ml/SageAttention/issues"

[tool.setuptools.packages.find]
include    = ["sageattention*"]
namespaces = false
